--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,26 +1,28 @@
 <h1>Add an Event</h1>
 
 <%= form_tag '/events', method: :post do %>
-  <div>
+  <div class="event-name">
     <%= label_tag :name %>
     <%= text_field_tag :name %>
-    <%= select_tag(:important_person_id, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']])) %>
+    <%= select_tag(:name, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']])) %>
   </div>
 
-  <div>
+  <div class="event-date">
     <%= label_tag :date %>
-    <%= text_field_tag :date %>
+    <%= date_field :event, :date %>
   </div>
 
-  <div>
+  <div class ="event-reminder">
     <%= label_tag :reminder %>
-    <%= text_field_tag :reminder %>
+    <%= datetime_local_field :event, :reminder %>
   </div>
 
-  <div>
+  <div class="event-description">
     <%= label_tag :description %>
     <%= text_field_tag :description %>
   </div>
+
+  <%= hidden_field_tag :important_person_id, @important_person.id %>
 
   <%= submit_tag "Add Event" %>
 
