--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,11 +1,10 @@
-<h1>Add an Event</h1>
+<h1>Edit an Event</h1>
 
-<%= form_tag '/events', method: :post do %>
-  
+<%= form_tag "/events/#{@event.id}", method: :patch do %>
 
   <div class="event-name">
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, @event.name %>
     <%= select_tag(:name, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']])) %>
   </div>
 
@@ -21,11 +20,11 @@
 
   <div class="event-description">
     <%= label_tag :description %>
-    <%= text_field_tag :description %>
+    <%= text_field_tag :description, @event.description %>
   </div>
 
-  <%= hidden_field(:important_person_id, @important_person.id) %>
+  <%= hidden_field_tag :important_person_id, @important_person.id %>
 
-  <%= submit_tag "Add Event" %>
+  <%= submit_tag "Edit Event" %>
 
 <% end %>
