--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,9 @@
 <h1> <%= @event.name %></h1>
 <img src="<%= @image %>" class="img-responsive">
-<p> <%= @event.date %> <%= @event.reminder %></p>
+<h4>Date: <%= @event.date %></h4> 
+<h4>Reminder Scheduled: <%= @event.reminder %></h4>
 <p> <%= @event.description %></p>
 <div>
   <%= link_to "Edit", "/events/#{@event.id}/edit" %>
-  <%= link_to "Delete", "/events/#{@event.id}" %>
+  <%= link_to "Delete", "/events/#{@event.id}", method: :delete, data:{confirm: "Are you sure you want to delete this event?"} %>
 </div>
