--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,7 @@
 <h4>Reminder Scheduled: <%= @event.reminder %></h4>
 <p> <%= @event.description %></p>
 <div>
+  <%= link_to "New", "/events/new" %>
   <%= link_to "Edit", "/events/#{@event.id}/edit" %>
   <%= link_to "Delete", "/events/#{@event.id}", method: :delete, data:{confirm: "Are you sure you want to delete this event?"} %>
 </div>
