--- a/app/views/wishlist_items/new.html.erb
+++ b/app/views/wishlist_items/new.html.erb
@@ -24,6 +24,7 @@
 
   <div class="favorite">
     <%= label_tag :favorite %>
+    <%= hidden_field_tag :favorite %>
     <%= check_box_tag :favorite %>
   </div>
 
