--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,8 +4,8 @@
 
   <div class="event-name">
     <%= label_tag :name %>
-    <%= text_field_tag :name, @event.name %>
-    <%= select_tag(:name, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']])) %>
+    <%= select_tag(:name, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']], @event.name)) %>
+    <%= text_field_tag :option_name, @event.name %>
   </div>
 
   <div class="event-date">
