--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,15 +1,34 @@
 <h1>Upcoming Events</h1>
 
 <% @events.each do |event| %>
-  <h1> <%= event.name %></h1>
+  
+  <h1> <%= link_to event.name, "/events/#{event.id}" %></h1>
+  
   <% if event.important_person %>
     <img src="<%= event.important_person.image_url %>" class="img-responsive">
   <% end %>
-  <h4>Date: <%= event.date %></h4> 
-  <h4>Reminder Scheduled: <%= event.reminder %></h4>
-  <p> <%= event.description %></p>
+  
+  <h4>Date: <%= event.pretty_date %></h4> 
+
+  <div>
+    <% if event.reminder == nil %>
+      <%= link_to "Add Reminder", "/events/#{event.id}/edit" %>
+    <% else %>
+      <h4>Reminder Scheduled: <%= event.pretty_reminder %></h4>
+    <% end %>
+  </div>
+
+  <div>
+    <% if event.description == "" %>
+      <h4><%= link_to "Add Description", "/events/#{event.id}/edit" %></h4>
+    <% else %>
+      <p> <%= event.description %></p>
+    <% end %>
+  </div>
+ 
   <div>
     <%= link_to "Edit", "/events/#{event.id}/edit" %>
     <%= link_to "Delete", "/events/#{event.id}", method: :delete, data:{confirm: "Are you sure you want to delete this event?"} %>
   </div>
+
 <% end %>
