--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,8 +5,8 @@
 
   <div class="event-name">
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
     <%= select_tag(:name, options_for_select([['Anniversary'], ['Baptism'], ['Bar mitzvah'], ['Bat mitzvah'], ['Birthday'], ['Christmas'], ['Communion'], ['Easter'], ['Father\'s Day'], ['Graduation'], ['Mother\'s Day'], ['New Year\'s'], ['Sweetest Day'], ['Thanksgiving'], ['Valentine\'s Day'], ['Wedding'], ['Other']])) %>
+    <%= text_field_tag :option_name %>
   </div>
 
   <div class="event-date">
