--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,33 @@
 <h1> <%= @event.name %></h1>
-<img src="<%= @image %>" class="img-responsive">
-<h4>Date: <%= @event.date %></h4> 
-<h4>Reminder Scheduled: <%= @event.reminder %></h4>
-<p> <%= @event.description %></p>
+
+<% if @event.important_person %>
+  <img src="<%= @event.important_person.image_url %>" class="img-responsive">
+<% end %>
+
+<h4>Date: <%= @event.pretty_date %></h4> 
+
+<div>
+  <% if @event.reminder == nil %>
+    <%= link_to "Add Reminder", "/events/#{@event.id}/edit" %>
+  <% else %>
+    <h4>Reminder Scheduled: <%= @event.pretty_reminder %></h4>
+  <% end %>
+</div>
+
+<div>
+  <% if @event.description == "" %>
+    <h4><%= link_to "Add Description", "/events/#{@event.id}/edit" %></h4>
+  <% else %>
+    <p> <%= @event.description %></p>
+  <% end %>
+</div>
+
 <div>
   <%= link_to "New", "/events/new" %>
   <%= link_to "Edit", "/events/#{@event.id}/edit" %>
   <%= link_to "Delete", "/events/#{@event.id}", method: :delete, data:{confirm: "Are you sure you want to delete this event?"} %>
+</div>
+
+<div>
+  <%= link_to "Return to #{@event.important_person.full_name}\'s Profile", "/important_persons/#{@event.important_person.id}" %>
 </div>
