--- a/app/views/wishlist_items/index.html.erb
+++ b/app/views/wishlist_items/index.html.erb
@@ -1,15 +1,38 @@
 <h1>Wishlist Items</h1>
 
 <% @wishlist_items.each do |wishlist_item| %>
-  <h1><%= wishlist_item.important_person.first_name %> <%= wishlist_item.important_person.last_name %></h1>
-  <h4><%= wishlist_item.item_name %></h4>
-  <p>Item Link: <%= link_to "Buy Here", wishlist_item.item_url %></p>
-  <img src ="<%= wishlist_item.image_url %>" class="img-responsive">
-  <p>Description: <%= wishlist_item.description %></p>
-  <div>
-    <%= link_to "New", "/wishlist_items/new" %>
-    <%= link_to "Edit", "/wishlist_items/#{wishlist_item.id}/edit" %>
-    <%= link_to "Delete", "/wishlist_items/#{wishlist_item.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
-  </div>
+  <h1><%= link_to wishlist_item.important_person.full_name, "/important_persons/#{wishlist_item.important_person.id}" %></h1>
+  
+  <h4><%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h4>
+  
+   <div>
+     <% if wishlist_item.item_url == "" %>
+       <%= link_to "Add Item URL", "/wishlist_items/#{wishlist_item.id}/edit" %>
+     <% else %>
+       <p>Item Link: <%= link_to "Buy Here", wishlist_item.item_url %></p>
+     <% end %>
+   </div>
+
+   <div>
+     <% if wishlist_item.image_url == "" %>
+       <%= link_to "Add Image URL", "/wishlist_items/#{wishlist_item.id}/edit" %>
+     <% else %>
+       <img src ="<%= wishlist_item.image_url %>" class="img-responsive">
+     <% end %>
+   </div>
+
+   <div>
+     <% if wishlist_item.description == "" %>
+       <%= link_to "Add Description", "/wishlist_items/#wishlist_item.id}/edit" %>
+     <% else %>
+       <p>Description: <%= wishlist_item.description %></p>
+     <% end %>
+   </div>
+   
+   <div>
+      <%= link_to "New", "/wishlist_items/new" %>
+      <%= link_to "Edit", "/wishlist_items/#{wishlist_item.id}/edit" %>
+      <%= link_to "Delete", "/wishlist_items/#{wishlist_item.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
+    </div>
 
 <% end %>
