--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,15 +1,21 @@
+
+
 <h1>Messages</h1>
 
 <% @messages.each do |message| %>
-  <h1><%= link_to message.important_person.full_name, "/important_persons/#{message.important_person.id}" %></h1>
-  <h3><%= link_to message.title, "/messages/#{message.id}" %></h3>
-  <p><%= message.message_format %></p>
-  <p><%= message.user_message %></p>
+  <% if current_user.id == message.important_person.user_id %>
 
-<div>
-  <%= link_to "New", "/messages/new" %>
-  <%= link_to "Edit", "/messages/#{message.id}/edit" %>
-  <%= link_to "Delete", "/messages/#{message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
-</div>
+    <h1><%= link_to message.important_person.full_name, "/important_persons/#{message.important_person.id}" %></h1>
+    <h3><%= link_to message.title, "/messages/#{message.id}" %></h3>
+    <p><%= message.message_format %></p>
+    <p><%= message.user_message %></p>
 
+    <div>
+      <%= link_to "New", "/messages/new" %>
+      <%= link_to "Edit", "/messages/#{message.id}/edit" %>
+      <%= link_to "Delete", "/messages/#{message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
+    </div>
+
+  <% end %>
+  
 <% end %>
