--- a/app/views/user_mailer/email_message.html.erb
+++ b/app/views/user_mailer/email_message.html.erb
@@ -1,5 +1,3 @@
 <h1>UserMailer#email_message</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/email_message.html.erb
-</p>
+<p> <%= @important_message %> </p>
