--- a/app/views/important_persons/show.html.erb
+++ b/app/views/important_persons/show.html.erb
@@ -1,7 +1,64 @@
-<h1><%= @important_person.first_name %> <%= @important_person.last_name %></h1>
-<img src="<%= @important_person.image_url %>" class="img-responsive">
-<p> <%= @important_person.email %></p>
-<p> <%= @important_person.phone_number %></p>
+<div class="section-header">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-12">
+        <h1 class="page-header"><%= @important_person.full_name %></h1>
+      </div>
+
+    </div>
+  </div> <!-- /.container -->
+</div> <!-- /.section-colored -->
+
+<div class="container container-int">
+
+  <ol class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="/important_persons">Important People</a></li>
+    <li class="active"><%= @important_person.full_name %></li>
+  </ol>
+  
+  <div class="row">
+
+    <div class="col-md-8">
+      <img class="img-responsive-ip-show" src="<%= @important_person.image_url %>" alt= <%= @important_person.full_name %>>
+    </div>
+
+    <div class="col-md-4">   
+        <%= form_tag '/events/new', method: :get do %>
+          <%= hidden_field_tag :important_person_id, @important_person.id %>
+          <%= submit_tag "Create New Event", class: "btn btn-primary", id: "ip-events-button" %>
+        <% end %>
+      <i class="fa fa-angle-right"></i>
+    </div>
+
+    <div class="col-md-4">
+      
+        <%= form_tag '/wishlist_items/new', method: :get do %>
+          <%= hidden_field_tag :important_person_id, @important_person.id %>
+          <%= submit_tag "Create New Wishlist Item",class: "btn btn-primary", id: "ip-wishlist-items-button" %>
+        <% end %>
+      <i class="fa fa-angle-right"></i></a>
+    </div>
+
+    <div class="col-md-4">
+        <%= form_tag '/messages/new', method: :get do %>
+          <%= hidden_field_tag :important_person_id, @important_person.id %>
+          <%= submit_tag "Create New Message", class: "btn btn-primary", id: "ip-messages-button" %>
+        <% end %>
+      <i class="fa fa-angle-right"></i></a>
+    </div>
+    </div>
+
+  </div>
+
+  <div class="col-md-">
+    <h3><small>Email</small></h3>
+    <small><%= @important_person.email %></small>
+    <h3><small>Phone</small></h3>
+    <p><small><%= @important_person.phone_number %></small></p>
+  </div>
+    
 
 <% @events.each do |event| %>
   <h5>Upcoming Event: <%= link_to event.name, "/events/#{event.id}" %> </h5>
@@ -14,19 +71,54 @@
 <% end %>
 
 
-<%= form_tag '/events/new', method: :get do %>
-  <%= hidden_field_tag :important_person_id, @important_person.id %>
-  <%= submit_tag "Create New Event" %>
-<% end %>
 
-<%= form_tag '/wishlist_items/new', method: :get do %>
-  <%= hidden_field_tag :important_person_id, @important_person.id %>
-  <%= submit_tag "Create New Wishlist Item" %>
-<% end %>
+  <div class="row">
 
-<%= form_tag '/messages/new', method: :get do %>
-  <%= hidden_field_tag :important_person_id, @important_person.id %>
-  <%= submit_tag "Create New Message" %>
-<% end %>
+    <div class="col-lg-4">
+      <h3 class="page-header">Related Projects</h3>
+    </div>
 
+    <div class="col-sm-4 col-xs-6">
+      <h3 class="events-header">Upcoming Events</h3>
+        <div class="overlay-portfolio">
+          <% @events.each do |event| %>
+            <h5><%= link_to event.name, "/events/#{event.id}" %> </h5>
+          <% end %>
+        </div><!-- /.overlay-portfolio -->
+        
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+        </button>
 
+        <button type="button" class="btn btn-default btn-lg">
+          <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Event
+        </button>
+
+      </a>
+    </div>
+
+    <div class="col-sm-4 col-xs-6">
+      <h3 class="wishlist-items-header">Wishlist Items</h3>
+        <div class="overlay-portfolio">
+          <% @wishlist_items.each do |wishlist_item| %>
+            <h5>Wishlist Items: <%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h5>
+          <% end %>
+        </div><!-- /.overlay-portfolio -->
+        <img class="img-responsive img-customer" src="img/portfolio_3.png" alt="Portfolio 3">
+      </a>
+    </div>
+
+    <div class="col-sm-4 col-xs-6">
+      <h3 class="messages-header">Scheduled Messages</h3>
+        <div class="overlay-portfolio">
+          <% @messages.each do |message| %>
+            <h5>Messages: <%= link_to message.title, "/messages/#{message.id}" %></h5>
+          <% end %>
+        </div><!-- /.overlay-portfolio -->
+        <img class="img-responsive img-customer" src="img/portfolio_4.png" alt="Portfolio 4">
+      </a>
+    </div>
+
+  </div>
+
+</div><!-- /.container -->
