--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,92 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>ImportantPersonsApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<ul class = "nav">
-  
+    <title>Important Persons App</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 
-  <% if user_signed_in? %>
-    <li> signed in: <%= current_user.email %></li>
-  <% elsif user_signed_in? == false %>
-    <li><%= link_to "Sign In", "/users/sign_in" %></li>
-  <% else %>
-    <li><a href="/users/sign_up">Sign Up</a></li>
-  <% end %>
-  
-  <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if user_signed_in? %></li>
-</ul>
+    <!-- font-awesome -->
+    <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if IE 7]>
+    <link href="css/font-awesome-ie7.css" rel="stylesheet">
+    <![endif]-->
 
-<%= link_to "Home", "/" %>
+    <!-- Bootstrap core CSS -->
+    <link href="stylesheets/bootstrap.css" rel="stylesheet">
+
+    <!-- custom CSS from Theme-->
+    <link href="stylesheets/style.css" rel="stylesheet">
+    <!-- my custom CSS -->
+    <link href="/stylesheets/my-styles.css.scss" rel="stylesheet">
+    <!--[if lte IE 8]>
+    <link href="css/ie8.css" rel="stylesheet">
+    <![endif]-->
+    <!--[if lte IE 7]>
+    <link href="css/ie7.css" rel="stylesheet">
+    <![endif]-->
+
+    <!-- JavaScript -->
+    <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/plugins.js"></script>
+    <!--[if lte IE 7]>
+    <script type="text/javascript" src="js/boxsizing/jquery.boxsizing.js"></script> 
+    <![endif]-->
+    <script type="text/javascript" src="js/banzhow.js"></script>
+  </head>
+
+
+  <body> 
+
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <a class="navbar-brand" href="/important_persons">Important People</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="/important_persons">Home</a></li>
+            <li><a href="/important_persons/new">Create Person</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/wishlist_items">Wishlists</a></li>
+            <li><a href="/messages">Messages</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Sign Out <i class="fa fa-angle-down"></i></a>
+              <ul class="dropdown-menu">
+            </li>
+                <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if user_signed_in? %></li>
+                <% if user_signed_in? %>
+                  <li id="signed-in"> signed in: <%= current_user.email %></li>
+                <% elsif user_signed_in? == false %>
+                  <li><%= link_to "Sign In", "/users/sign_in" %></li>
+                <% else %>
+                  <li><a href="/users/sign_up">Sign Up</a></li>
+                <% end %>
+              </ul>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>   
+
+
 
 <% flash.each do |name, message| %>
   <div class="alert alert-<%= name %> alert-dismissible" role="alert">
@@ -32,6 +96,15 @@
 <% end %>
 
 <%= yield %>
+
+
+<div class="footer-after">
+  <div class="container">
+    <div class="row">
+      <p class="col-md-10">©2016 All rights reserved. Designed by Justin Jungst.</p>
+    </div><!-- /.row -->
+  </div>
+</div>
 
 </body>
 </html>
