Action Mailer Button Added, Links Working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,17 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require theme/bootstrap-ie7
+
  *= require theme/bootstrap
- *= require theme/font-awesome-ie7
  *= require theme/font-awesome.min
- *= require theme/ie7
- *= require theme/ie8
  *= require theme/style
  *= require theme/blue
- *= require theme/orange
- *= require theme/red
- *= require theme/violet
  *= important_persons
  *= require_tree .
  *= require_self
@@ -43,6 +37,14 @@
  .navbar{
    border-bottom: 2px solid #2090AC;
  }
+
+ .navbar-header{
+   text-align: left;
+}
+
+ .navbar-brand{
+   text-align: left;
+}
 
  .navbar-inverse {
    background-color: #28ABCC;
