--- a/app/assets/stylesheets/important_persons.css.scss
+++ b/app/assets/stylesheets/important_persons.css.scss
@@ -2,6 +2,32 @@
   padding-top: 15px;
 }
 
+
+#ip-no-image-index-text {
+  font-size: 24px;
+  text-align: center;
+}
+
+#ip-index-info {
+  font-size: 18px;
+}
+
+#ip-index-button {
+  background-color: #28ABCC;
+  font-size: 24px;
+  color: white;
+}
+
+.img-responsive-ip-index {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#ip-index-ned {
+  text-align: center;
+  }
+
 .img-responsive-ip-show {
   max-width: 66%;
   height: auto;
