--- a/app/views/wishlist_items/edit.html.erb
+++ b/app/views/wishlist_items/edit.html.erb
@@ -27,7 +27,10 @@
     <%= check_box_tag :favorite, @wishlist_item.favorite %>
   </div>
 
-  <%= hidden_field_tag(:important_person_id, @important_person.id) %>
+  <div>
+    <%= label_tag "Select Important Person the Event is for" %>
+    <%= select_tag(:important_person_id, options_from_collection_for_select(@important_persons, "id", "full_name")) %>
+  </div>
 
   <%= submit_tag "Edit Item" %>
 
