--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -24,7 +24,10 @@
     <%= text_field_tag :description %>
   </div>
 
-  <%= hidden_field_tag(:important_person_id, @important_person.id) %>
+  <div>
+    <%= label_tag "Select Important Person the Event is for" %>
+    <%= select_tag(:important_person_id, options_from_collection_for_select(@important_persons, "id", "full_name")) %>
+  </div>
 
   <%= submit_tag "Add Event" %>
 
