--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <div>
-  <%= link_to "New", "/events/new" %>
+  <%= link_to "Add New Event", "/events/new" %>
   <%= link_to "Edit", "/events/#{@event.id}/edit" %>
   <%= link_to "Delete", "/events/#{@event.id}", method: :delete, data:{confirm: "Are you sure you want to delete this event?"} %>
 </div>
