--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -23,7 +23,10 @@
     <%= datetime_local_field :message, :scheduled_time %>
   </div>
 
-  <%= hidden_field_tag(:important_person_id, @important_person.id) %>
+  <div>
+    <%= label_tag "Select Important Person the Event is for" %>
+    <%= select_tag(:important_person_id, options_from_collection_for_select(@important_persons, "id", "full_name")) %>
+  </div>
 
   <%= submit_tag "Edit Message" %>
 
