--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -25,7 +25,7 @@
 
   <div>
     <%= label_tag "Select Important Person the Event is for" %>
-    <%= select_tag(:important_person_id, options_from_collection_for_select(@important_persons, "id", "full_name")) %>
+    <%= select_tag(:important_person_id, options_from_collection_for_select(@user, "id", "full_name")) %>
   </div>
 
   <%= submit_tag "Edit Event" %>
