--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,60 +2,64 @@
 <html>
 <head>
   <title>ImportantPersonsApp</title>
-  <link href="/stylesheets/my-styles.css.scss" rel="stylesheet">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 
   <body> 
-
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 
-          <a class="navbar-brand" href="/important_persons">Important People</a>
-        </div>
+            <a class="navbar-brand" href="/important_persons">Important People</a>
+          </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/important_persons">Home</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Create </a>
-              <ul class="dropdown-menu">
-                <li><a href="/important_persons/new">New Important Person</a></li>
-                <li><a href="/events/new">New Event</a></li>
-                <li><a href="/wishlist_items/new">New Wishlist Item</a></li>
-                <li><a href="/messages/new">New Message</a></li>
-              </ul>
-            </li>
-            <li><a href="/events">Events</a></li>
-            <li><a href="/wishlist_items">Wishlists</a></li>
-            <li><a href="/messages">Messages</a></li>
-            <li class="dropdown">
-              <a href="/users/sign_out" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Sign Out</a>
-              <ul class="dropdown-menu">
-            </li>
-                <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if user_signed_in? %></li>
-                <% if user_signed_in? %>
-                  <li id="signed-in"> signed in: <%= current_user.email %></li>
-                <% elsif user_signed_in? == false %>
-                  <li><%= link_to "Sign In", "/users/sign_in" %></li>
-                <% else %>
-                  <li><a href="/users/sign_up">Sign Up</a></li>
-                <% end %>
-              </ul>
-          </ul>
-        </div><!-- /.navbar-collapse -->
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="/">Home</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Create </a>
+                <ul class="dropdown-menu">
+                  <li><a href="/important_persons/new">New Important Person</a></li>
+                  <li><a href="/events/new">New Event</a></li>
+                  <li><a href="/wishlist_items/new">New Wishlist Item</a></li>
+                  <li><a href="/messages/select">New Message</a></li>
+                </ul>
+              </li>
+              <li><a href="/important_persons">Your Important People</a></li>
+              <li><a href="/events">Events</a></li>
+              <li><a href="/wishlist_items">Wishlists</a></li>
+              <li><a href="/messages">Messages</a></li>
+              <li class="dropdown">
+                <a href="/users/sign_out" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Profile</a>
+                <ul class="dropdown-menu">
+                  <li><a href="/users/edit">Edit Profile</a></li>
+                  <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if user_signed_in? %></li>
+                  <% if user_signed_in? %>
+                    <li id="signed-in"> signed in: <%= current_user.email %></li>
+                  <% elsif user_signed_in? == false %>
+                    <li><%= link_to "Sign In", "/users/sign_in" %></li>
+                  <% else %>
+                    <li><a href="/users/sign_up">Sign Up</a></li>
+                  <% end %>
+                </ul>
+            </ul>
+          </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
-    </nav>   
+    </nav>  
+  
+  <!--For Universal Background Image -->
+ <!--    <div id="bg">
+      <img class="img-responsive-background" src="https://www.placergop.org/images/CONTENTIMAGES/family.jpg">
+    </div> --><!-- image collapse -->
 
 
 
@@ -70,8 +74,8 @@
 
 
 <div class="footer-after">
-  <div class="container">
-    <div class="row">
+  <div class="container-footer">
+    <div class="row-footer">
       <p class="col-md-10">©2016 All rights reserved. Designed by Justin Jungst.</p>
     </div><!-- /.row -->
   </div>
