--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,33 +1,92 @@
-<h1>Edit A Message</h1>
+<% if @message.message_format == "email" %>
+  
+  <h1>Edit Email</h1>
 
-<%= form_tag "/messages/#{@message.id}", method: :patch do %>
+  <%= form_tag "/messages/#{@message.id}", method: :patch do %>
 
-  <div class="title">
-    <%= label_tag :title %>
-    <%= text_field_tag :title, @message.title %>
-  </div>
+    <div class="title">
+      <%= label_tag :title %>
+      <%= text_field_tag :title, @message.title %>
+    </div>
 
-  <div class="message">
-    <%= label_tag :user_message %>
-    <%= text_field_tag :user_message, @message.user_message %>
-  </div>
+    <div class="message">
+      <%= label_tag :user_message %>
+      <%= text_field_tag :user_message, @message.user_message %>
+    </div>
 
-  <div>
-    <%= label_tag :message_format %>
-    <%= text_field_tag :message_format %>
-    <%= select_tag(:message_format, options_for_select([['Text Message'], ['Email'], ['Email Template']])) %>
-  </div>
+    <div class="message-format">
+      <%= label_tag :email_template %>
+      <%= select_tag(:email_template, options_for_select([['Regular'], ['Birthday'], ['Christmas'], ['Wedding']], @message.email_template)) %>
+    </div>
 
-  <div>
-    <%= label_tag :scheduled_time %>
-    <%= datetime_local_field :message, :scheduled_time %>
-  </div>
+    <div>
+      <%= label_tag :scheduled_time %>
+      <%= datetime_local_field :message, :scheduled_time %>
+    </div>
 
-  <div>
-    <%= label_tag "Select Important Person the Event is for" %>
-    <%= select_tag(:important_person_id, options_from_collection_for_select(@important_persons, "id", "full_name")) %>
-  </div>
+    <div>
+      <%= label_tag "Select Important Person the Event is for" %>
+      <%= select_tag(:important_person_id, options_from_collection_for_select(@user, "id", "full_name")) %>
+    </div>
 
-  <%= submit_tag "Edit Message" %>
+    <%= hidden_field_tag :message_format, :email %>
+
+    <%= submit_tag "Edit Message" %>
+
+  <% end %>
+
+<% elsif @message.message_format == "text" %>
+
+  <h1>Edit Text</h1>
+
+  <%= form_tag "/messages/#{@message.id}", method: :patch do %>
+
+    <div class="message">
+      <%= label_tag :user_message %>
+      <%= text_field_tag :user_message, @message.user_message %>
+    </div>
+
+    <div>
+      <%= label_tag :scheduled_time %>
+      <%= datetime_local_field :message, :scheduled_time %>
+    </div>
+
+    <div>
+      <%= label_tag "Select Important Person the Event is for" %>
+      <%= select_tag(:important_person_id, options_from_collection_for_select(@user, "id", "full_name")) %>
+    </div>
+
+    <%= submit_tag "Edit Text" %>
+
+    <%= hidden_field_tag :message_format, :text %>
+
+  <% end %>
+
+<% elsif @message.message_format == "text" %>
+
+  <h1>Edit Tweet</h1>
+
+  <%= form_tag "/messages/#{@message.id}", method: :patch do %>
+
+    <div class="message">
+      <%= label_tag :user_message %>
+      <%= text_field_tag :user_message, @message.user_message %>
+    </div>
+
+    <div>
+      <%= label_tag :scheduled_time %>
+      <%= datetime_local_field :message, :scheduled_time %>
+    </div>
+
+    <div>
+      <%= label_tag "Select Important Person the Event is for" %>
+      <%= select_tag(:important_person_id, options_from_collection_for_select(@user, "id", "full_name")) %>
+    </div>
+
+    <%= hidden_field_tag :message_format, :tweet %>
+
+    <%= submit_tag "Edit Tweet" %>
+
+  <% end %>
 
 <% end %>
