--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,18 +1,23 @@
 
+<div>
+  <h1><%= @profile %></h1>
+</div>
 
 <h1>Messages</h1>
 
 <% @messages.each do |message| %>
+  
   <% if current_user.id == message.important_person.user_id %>
-
-    <h1><%= link_to message.important_person.full_name, "/important_persons/#{message.important_person.id}" %></h1>
-    <h3><%= link_to message.title, "/messages/#{message.id}" %></h3>
-    <p><%= message.message_format %></p>
-    <p><%= message.scheduled_time %></p>
-    <p><%= message.user_message %></p>
+    <div>
+      <h1><%= link_to message.important_person.full_name, "/important_persons/#{message.important_person.id}" %></h1>
+      <h3><%= link_to message.title, "/messages/#{message.id}" %></h3>
+      <p><%= message.message_capitalize %></p>
+      <p><%= message.pretty_scheduled_time %></p>
+      <p><%= message.user_message %></p>
+    </div>
 
     <div>
-      <%= link_to "New", "/messages/new" %>
+      <%= link_to "New", "/messages/select" %>
       <%= link_to "Edit", "/messages/#{message.id}/edit" %>
       <%= link_to "Delete", "/messages/#{message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
     </div>
