--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,16 +1,29 @@
 <h1>Message for <%= @message.important_person.full_name %></h1>
 <img src="<%= @image %>" class="img-responsive">
 <h3> <%= @message.title %></h3>
-<p> <%= @message.message_format %></p>
-<p> <%= @message.scheduled_time %> </p>
+<p> <%= @message.message_capitalize %></p>
+<p> <%= @message.pretty_scheduled_time %> </p>
 <p> <%= @message.user_message %></p>
 
-<%= link_to "Send Email Now", "/messages/send_email/#{@message.id}", method: :post %>
 
-<%= link_to "Send Email Later", "/messages/send_email_later/#{@message.id}", method: :post %>
+
+
+<% if @message.message_format == "email" %>
+
+  <%= link_to "Send Email Now", "/messages/send_email/#{@message.id}", method: :post %>
+
+  <%= link_to "Send Email Later", "/messages/send_email_later/#{@message.id}", method: :post %>
+
+<% elsif @message.message_format == "text" %>
+
+<% elsif @message.message_format == "tweet" %>
+
+  <%= link_to "Send Tweet Now", "/messages/send_tweet/#{@message.id}", method: :post %>
+
+<% end %>
 
 <div>
-  <%= link_to "New", "/messages/new" %>
+  <%= link_to "New", "/messages/select" %>
   <%= link_to "Edit", "/messages/#{@message.id}/edit" %>
   <%= link_to "Delete", "/messages/#{@message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
 </div>
