--- a/app/views/user_mailer/email_message.text.erb
+++ b/app/views/user_mailer/email_message.text.erb
@@ -1,3 +1,2 @@
-UserMailer#email_message
-
-<%= @greeting %>, find me in app/views/user_mailer/email_message.text.erb
+<%= @message_title %>
+<%= @greeting %>
